--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/microblogdemo?serverTimezone=CET
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_demo?serverTimezone=CET
 spring.datasource.username=root
 spring.datasource.password=java
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -7,6 +7,5 @@ server.port=8082
 spring.jpa.show-sql=true
 spring.security.user.name=admin
 spring.security.user.password=admin
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
 
