--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 
+jwt.header = Authorization
+jwt.secret = Fryga
+jwt.expiration = 1800
